infra/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostile-tweets-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostile-tweets-app
  template:
    metadata:
      labels:
        app: hostile-tweets-app
    spec:
      containers:
      - name: hostile-tweets-app
        image: chaimshvadron/malicious_text_feature:V7
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
