infra/enricher-openshift.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enricher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enricher
  template:
    metadata:
      labels:
        app: enricher
    spec:
      containers:
      - name: enricher
        image: chaimshvadron/iranian-terror-tweets-hunter-enricher:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: enricher-service
spec:
  selector:
    app: enricher
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: enricher-route
spec:
  to:
    kind: Service
    name: enricher-service
  port:
    targetPort: 8000
  tls:
    termination: edge
