infra/preprocessor-openshift.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preprocessor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preprocessor
  template:
    metadata:
      labels:
        app: preprocessor
    spec:
      containers:
      - name: preprocessor
        image: chaimshvadron/iranian-terror-tweets-hunter-preprocessor:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: preprocessor-service
spec:
  selector:
    app: preprocessor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: preprocessor-route
spec:
  to:
    kind: Service
    name: preprocessor-service
  port:
    targetPort: 8000
  tls:
    termination: edge
